--- a/modules/openapi-generator/src/main/resources/csharp-experimental/ApiClient.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-experimental/ApiClient.mustache
@@ -1,23 +1,18 @@
 {{>partial_header}}
 
 using System;
-using System.Collections;
 using System.Collections.Generic;
-using System.Globalization;
 using System.IO;
 using System.Linq;
-using System.Net;
 using System.Net.Http;
-using System.Runtime.Serialization;
-using System.Runtime.Serialization.Formatters;
-using System.Text;
 using System.Text.RegularExpressions;
 using System.Threading.Tasks;
+
 using Newtonsoft.Json;
 using Newtonsoft.Json.Serialization;
+
 using RestSharp;
 using RestSharp.Deserializers;
-using ErrorEventArgs = Newtonsoft.Json.Serialization.ErrorEventArgs;
 using RestSharpMethod = RestSharp.Method;
 
 namespace {{packageName}}.Client
@@ -105,7 +100,7 @@ namespace {{packageName}}.Client
 
             if (type.Name.StartsWith("System.Nullable`1[[System.DateTime")) // return a datetime object
             {
-                return DateTime.Parse(response.Content,  null, System.Globalization.DateTimeStyles.RoundtripKind);
+                return DateTime.Parse(response.Content, null, System.Globalization.DateTimeStyles.RoundtripKind);
             }
 
             if (type == typeof(string) || type.Name.StartsWith("System.Nullable")) // return primitive type
@@ -214,93 +209,63 @@ namespace {{packageName}}.Client
                 JsonSerializer = new CustomJsonCodec(_configuration)
             };
 
-            if (options.PathParameters != null)
+            foreach (var pathParam in options.PathParameters)
             {
-                foreach (var pathParam in options.PathParameters)
-                {
-                    request.AddParameter(pathParam.Key, pathParam.Value, ParameterType.UrlSegment);
-                }
+                request.AddParameter(pathParam.Key, pathParam.Value, ParameterType.UrlSegment);
             }
             
-            if (options.QueryParameters != null)
+            foreach (var queryParam in options.QueryParameters)
             {
-                foreach (var queryParam in options.QueryParameters)
+                foreach (var value in queryParam.Value)
                 {
-                    foreach (var value in queryParam.Value)
-                    {
-                        request.AddQueryParameter(queryParam.Key, value);
-                    }
+                    request.AddQueryParameter(queryParam.Key, value);
                 }
             }
 
-            if (_configuration.DefaultHeaders != null)
+            foreach (var headerParam in _configuration.DefaultHeaders)
             {
-                foreach (var headerParam in _configuration.DefaultHeaders)
+                request.AddHeader(headerParam.Key, headerParam.Value);
+            }
+
+            foreach (var headerParam in options.HeaderParameters)
+            {
+                foreach (var value in headerParam.Value)
                 {
-                    request.AddHeader(headerParam.Key, headerParam.Value);
+                    request.AddHeader(headerParam.Key, value);
                 }
             }
 
-            if (options.HeaderParameters != null)
+            foreach (var formParam in options.FormParameters)
             {
-                foreach (var headerParam in options.HeaderParameters)
-                {
-                    foreach (var value in headerParam.Value)
-                    {
-                        request.AddHeader(headerParam.Key, value);
-                    }
-                }
-            }
-
-            if (options.FormParameters != null)
-            {
-                foreach (var formParam in options.FormParameters)
-                {
-                    request.AddParameter(formParam.Key, formParam.Value);
-                }
+                request.AddParameter(formParam.Key, formParam.Value);
             }
 
             if (options.Data != null)
             {
-                if (options.HeaderParameters != null)
+                var contentTypes = options.HeaderParameters["Content-Type"];
+                if (contentTypes.Any(header => header.Contains("application/json")))
                 {
-                    var contentTypes = options.HeaderParameters["Content-Type"];
-                    if (contentTypes == null || contentTypes.Any(header => header.Contains("application/json")))
-                    {
-                        request.RequestFormat = DataFormat.Json;
-                    }
-                    else
-                    {
-                        // TODO: Generated client user should add additional handlers. RestSharp only supports XML and JSON, with XML as default.
-                    }
+                    request.RequestFormat = DataFormat.Json;
                 }
                 else
                 {
-                    // Here, we'll assume JSON APIs are more common. XML can be forced by adding produces/consumes to openapi spec explicitly.
-                    request.RequestFormat = DataFormat.Json;
+                    // TODO: Generated client user should add additional handlers. RestSharp only supports XML and JSON, with XML as default.
                 }
 
                 request.AddJsonBody(options.Data);
             }
 
-            if (options.FileParameters != null)
+            foreach (var fileParam in options.FileParameters)
             {
-                foreach (var fileParam in options.FileParameters)
+                var bytes = ClientUtils.ReadAsBytes(fileParam.Value);
+                var fileStream = fileParam.Value as FileStream;
+                if (fileStream != null)
                 {
-                    var bytes = ClientUtils.ReadAsBytes(fileParam.Value);
-                    var fileStream = fileParam.Value as FileStream;
-                    if (fileStream != null)
-                        request.Files.Add(FileParameter.Create(fileParam.Key, bytes, System.IO.Path.GetFileName(fileStream.Name)));
-                    else
-                        request.Files.Add(FileParameter.Create(fileParam.Key, bytes, "no_file_name_provided"));
+                    request.Files.Add(FileParameter.Create(fileParam.Key, bytes, System.IO.Path.GetFileName(fileStream.Name)));
                 }
-            }
-
-            if (options.Cookies != null && options.Cookies.Count > 0)
-            {
-                foreach (var cookie in options.Cookies)
+                else
                 {
-                    request.AddCookie(cookie.Name, cookie.Value);
+                    request.Files.Add(FileParameter.Create(fileParam.Key, bytes, "no_file_name_provided"));
                 }
             }
             
@@ -314,30 +279,12 @@ namespace {{packageName}}.Client
 
             var transformed = new ApiResponse<T>(response.StatusCode, new Multimap<string, string>({{#caseInsensitiveResponseHeaders}}StringComparer.OrdinalIgnoreCase{{/caseInsensitiveResponseHeaders}}), result, rawContent)
             {
-                ErrorText = response.ErrorMessage,
-                Cookies = new List<Cookie>()
+                ErrorText = response.ErrorMessage
             };
             
-            if (response.Headers != null)
+            foreach (var responseHeader in response.Headers)
             {
-                foreach (var responseHeader in response.Headers)
-                {
-                    transformed.Headers.Add(responseHeader.Name, ClientUtils.ParameterToString(responseHeader.Value, _configuration));
-                }
-            }
-
-            if (response.Cookies != null)
-            {
-                foreach (var responseCookies in response.Cookies)
-                {
-                    transformed.Cookies.Add(
-                        new Cookie(
-                            responseCookies.Name, 
-                            responseCookies.Value, 
-                            responseCookies.Path, 
-                            responseCookies.Domain)
-                        );
-                }
+                transformed.Headers.Add(responseHeader.Name, ClientUtils.ParameterToString(responseHeader.Value, _configuration));
             }
 
             return transformed;
@@ -348,17 +295,19 @@ namespace {{packageName}}.Client
             RestClient client = new RestClient(_configuration.BasePath);
 
             client.ClearHandlers();
-            var existingDeserializer = req.JsonSerializer as IDeserializer;
-            if (existingDeserializer != null)
-            {
-                client.AddHandler(() => existingDeserializer, "application/json", "text/json", "text/x-json", "text/javascript", "*+json");
-            }
-            else
-            {
-                client.AddHandler(() => new CustomJsonCodec(_configuration), "application/json", "text/json", "text/x-json", "text/javascript", "*+json");
-            }
 
-            client.AddHandler(() => new XmlDeserializer(), "application/xml", "text/xml", "*+xml", "*");
+            var existingDeserializer = req.JsonSerializer as IDeserializer ?? new CustomJsonCodec(_configuration);
+
+            client.AddHandler("application/json", () => existingDeserializer);
+            client.AddHandler("text/json", () => existingDeserializer);
+            client.AddHandler("text/x-json", () => existingDeserializer);
+            client.AddHandler("text/javascript", () => existingDeserializer);
+            client.AddHandler("*+json", () => existingDeserializer);
+
+            client.AddHandler("application/xml", () => new XmlDeserializer());
+            client.AddHandler("text/xml", () => new XmlDeserializer());
+            client.AddHandler("*+xml", () => new XmlDeserializer());
+            client.AddHandler("*", () => new XmlDeserializer());
 
             client.Timeout = _configuration.Timeout;
 
@@ -379,32 +328,6 @@ namespace {{packageName}}.Client
                 result.ErrorText = response.ErrorMessage;
             }
 
-            if (response.Cookies != null && response.Cookies.Count > 0)
-            {
-                if(result.Cookies == null) result.Cookies = new List<Cookie>();
-                foreach (var restResponseCookie in response.Cookies)
-                {
-                    var cookie = new Cookie(
-                        restResponseCookie.Name,
-                        restResponseCookie.Value,
-                        restResponseCookie.Path,
-                        restResponseCookie.Domain
-                    )
-                    {
-                        Comment = restResponseCookie.Comment,
-                        CommentUri = restResponseCookie.CommentUri,
-                        Discard = restResponseCookie.Discard,
-                        Expired = restResponseCookie.Expired,
-                        Expires = restResponseCookie.Expires,
-                        HttpOnly = restResponseCookie.HttpOnly,
-                        Port = restResponseCookie.Port,
-                        Secure = restResponseCookie.Secure,
-                        Version = restResponseCookie.Version
-                    };
-
-                    result.Cookies.Add(cookie);
-                }
-            }
             return result;
         }
 
@@ -413,17 +336,19 @@ namespace {{packageName}}.Client
             RestClient client = new RestClient(_configuration.BasePath);
 
             client.ClearHandlers();
-            var existingDeserializer = req.JsonSerializer as IDeserializer;
-            if (existingDeserializer != null)
-            {
-                client.AddHandler(() => existingDeserializer, "application/json", "text/json", "text/x-json", "text/javascript", "*+json");
-            }
-            else
-            {
-                client.AddHandler(() => new CustomJsonCodec(_configuration), "application/json", "text/json", "text/x-json", "text/javascript", "*+json");
-            }
 
-            client.AddHandler(() => new XmlDeserializer(), "application/xml", "text/xml", "*+xml", "*");
+            var existingDeserializer = req.JsonSerializer as IDeserializer ?? new CustomJsonCodec(_configuration);
+
+            client.AddHandler("application/json", () => existingDeserializer);
+            client.AddHandler("text/json", () => existingDeserializer);
+            client.AddHandler("text/x-json", () => existingDeserializer);
+            client.AddHandler("text/javascript", () => existingDeserializer);
+            client.AddHandler("*+json", () => existingDeserializer);
+
+            client.AddHandler("application/xml", () => new XmlDeserializer());
+            client.AddHandler("text/xml", () => new XmlDeserializer());
+            client.AddHandler("*+xml", () => new XmlDeserializer());
+            client.AddHandler("*", () => new XmlDeserializer());
 
             client.Timeout = _configuration.Timeout;
 
@@ -444,32 +369,6 @@ namespace {{packageName}}.Client
                 result.ErrorText = response.ErrorMessage;
             }
 
-            if (response.Cookies != null && response.Cookies.Count > 0)
-            {
-                if(result.Cookies == null) result.Cookies = new List<Cookie>();
-                foreach (var restResponseCookie in response.Cookies)
-                {
-                    var cookie = new Cookie(
-                        restResponseCookie.Name,
-                        restResponseCookie.Value,
-                        restResponseCookie.Path,
-                        restResponseCookie.Domain
-                    )
-                    {
-                        Comment = restResponseCookie.Comment,
-                        CommentUri = restResponseCookie.CommentUri,
-                        Discard = restResponseCookie.Discard,
-                        Expired = restResponseCookie.Expired,
-                        Expires = restResponseCookie.Expires,
-                        HttpOnly = restResponseCookie.HttpOnly,
-                        Port = restResponseCookie.Port,
-                        Secure = restResponseCookie.Secure,
-                        Version = restResponseCookie.Version
-                    };
-
-                    result.Cookies.Add(cookie);
-                }
-            }
             return result;
         }
 
