--- a/modules/openapi-generator/src/main/resources/csharp-experimental/ApiResponse.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-experimental/ApiResponse.mustache
@@ -1,7 +1,5 @@
 {{>partial_header}}
 
-using System;
-using System.Collections.Generic;
 using System.Net;
 
 namespace {{packageName}}.Client
@@ -11,16 +9,6 @@ namespace {{packageName}}.Client
     /// </summary>
     public interface IApiResponse
     {
-        /// <summary>
-        /// The data type of <see cref="Content"/>
-        /// </summary>
-        Type ResponseType { get; }
-
-        /// <summary>
-        /// The content of this response
-        /// </summary>
-        object Content { get; }
-
         /// <summary>
         /// Gets or sets the status code (HTTP status code)
         /// </summary>
@@ -36,12 +24,7 @@ namespace {{packageName}}.Client
         /// <summary>
         /// Gets or sets any error text defined by the calling client.
         /// </summary>
-        string ErrorText { get; set; }
-
-        /// <summary>
-        /// Gets or sets any cookies passed along on the response.
-        /// </summary>
-        List<Cookie> Cookies { get; set; }
+        string? ErrorText { get; set; }
 
         /// <summary>
         /// The raw content of this response
@@ -55,7 +38,7 @@ namespace {{packageName}}.Client
     public class ApiResponse<T> : IApiResponse
     {
         #region Properties
-        
+
         /// <summary>
         /// Gets or sets the status code (HTTP status code)
         /// </summary>
@@ -77,38 +60,17 @@ namespace {{packageName}}.Client
         /// <summary>
         /// Gets or sets any error text defined by the calling client.
         /// </summary>
-        public string ErrorText { get; set; }
-
-        /// <summary>
-        /// Gets or sets any cookies passed along on the response.
-        /// </summary>
-        public List<Cookie> Cookies { get; set; }
-
-        /// <summary>
-        /// The content of this response
-        /// </summary>
-        public Type ResponseType
-        {
-            get { return typeof(T); }
-        }
-
-        /// <summary>
-        /// The data type of <see cref="Content"/>
-        /// </summary>
-        public object Content
-        {
-            get { return Data; }
-        }
+        public string? ErrorText { get; set; }
 
         /// <summary>
         /// The raw content
         /// </summary>
         public string RawContent { get; }
-        
+
         #endregion Properties
-        
+
         #region Constructors
-        
+
         /// <summary>
         /// Initializes a new instance of the <see cref="ApiResponse{T}" /> class.
         /// </summary>
@@ -122,35 +84,6 @@ namespace {{packageName}}.Client
             Headers = headers;
             Data = data;
             RawContent = rawContent;
-        }
-
-        /// <summary>
-        /// Initializes a new instance of the <see cref="ApiResponse{T}" /> class.
-        /// </summary>
-        /// <param name="statusCode">HTTP status code.</param>
-        /// <param name="headers">HTTP headers.</param>
-        /// <param name="data">Data (parsed HTTP body)</param>
-        public ApiResponse(HttpStatusCode statusCode, Multimap<string, string> headers, T data) : this(statusCode, headers, data, null)
-        {
-        }
-
-        /// <summary>
-        /// Initializes a new instance of the <see cref="ApiResponse{T}" /> class.
-        /// </summary>
-        /// <param name="statusCode">HTTP status code.</param>
-        /// <param name="data">Data (parsed HTTP body)</param>
-        /// <param name="rawContent">Raw content.</param>
-        public ApiResponse(HttpStatusCode statusCode, T data, string rawContent) : this(statusCode, null, data, rawContent)
-        {
-        }
-
-        /// <summary>
-        /// Initializes a new instance of the <see cref="ApiResponse{T}" /> class.
-        /// </summary>
-        /// <param name="statusCode">HTTP status code.</param>
-        /// <param name="data">Data (parsed HTTP body)</param>
-        public ApiResponse(HttpStatusCode statusCode, T data) : this(statusCode, data, null)
-        {
         }
 
         #endregion Constructors
