--- a/modules/openapi-generator/src/main/resources/csharp-experimental/IReadableConfiguration.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-experimental/IReadableConfiguration.mustache
@@ -1,6 +1,5 @@
 {{>partial_header}}
 
-using System;
 using System.Collections.Generic;
 
 namespace {{packageName}}.Client
@@ -14,7 +13,7 @@ namespace {{packageName}}.Client
         /// Gets the access token.
         /// </summary>
         /// <value>Access token.</value>
-        string AccessToken { get; }
+        string? AccessToken { get; }
 
         /// <summary>
         /// Gets the API key.
@@ -62,19 +61,19 @@ namespace {{packageName}}.Client
         /// Gets the user agent.
         /// </summary>
         /// <value>User agent.</value>
-        string UserAgent { get; }
+        string? UserAgent { get; }
 
         /// <summary>
         /// Gets the username.
         /// </summary>
         /// <value>Username.</value>
-        string Username { get; }
+        string? Username { get; }
 
         /// <summary>
         /// Gets the password.
         /// </summary>
         /// <value>Password.</value>
-        string Password { get; }
+        string? Password { get; }
 
         /// <summary>
         /// Gets the API key with prefix.
