--- a/modules/openapi-generator/src/main/resources/csharp-experimental/Project.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-experimental/Project.mustache
@@ -6,10 +6,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+{{#models}}
+{{#model}}
+{{#discriminator}}
       <PackageReference Include="JsonSubTypes" Version="1.5.2" />
+{{/discriminator}}
+{{/model}}
+{{/models}}
       <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
       <PackageReference Include="RestSharp" Version="106.10.1" />
+{{#validatable}}
       <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
+{{/validatable}}
   </ItemGroup>
 
   <PropertyGroup>
