--- a/modules/openapi-generator/src/main/resources/csharp-experimental/RequestOptions.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-experimental/RequestOptions.mustache
@@ -16,51 +16,33 @@ namespace {{packageName}}.Client
         /// <summary>
         /// Parameters to be bound to path parts of the Request's URL
         /// </summary>
-        public Dictionary<string, string> PathParameters { get; set; }
+        public Dictionary<string, string> PathParameters { get; set; } = new Dictionary<string, string>();
 
         /// <summary>
         /// Query parameters to be applied to the request.
         /// Keys may have 1 or more values associated.
         /// </summary>
-        public Multimap<string, string> QueryParameters { get; set; }
+        public Multimap<string, string> QueryParameters { get; set; } = new Multimap<string, string>();
 
         /// <summary>
         /// Header parameters to be applied to to the request.
         /// Keys may have 1 or more values associated.
         /// </summary>
-        public Multimap<string, string> HeaderParameters { get; set; }
+        public Multimap<string, string> HeaderParameters { get; set; } = new Multimap<string, string>();
 
         /// <summary>
         /// Form parameters to be sent along with the request.
         /// </summary>
-        public Dictionary<string, string> FormParameters { get; set; }
+        public Dictionary<string, string> FormParameters { get; set; } = new Dictionary<string, string>();
 
         /// <summary>
         /// File parameters to be sent along with the request.
         /// </summary>
-        public Dictionary<string, Stream> FileParameters { get; set; }
-
-        /// <summary>
-        /// Cookies to be sent along with the request.
-        /// </summary>
-        public List<Cookie> Cookies { get; set; }
+        public Dictionary<string, Stream> FileParameters { get; set; } = new Dictionary<string, Stream>();
 
         /// <summary>
         /// Any data associated with a request body.
         /// </summary>
-        public object Data { get; set; }
-
-        /// <summary>
-        /// Constructs a new instance of <see cref="RequestOptions"/>
-        /// </summary>
-        public RequestOptions()
-        {
-            PathParameters = new Dictionary<string, string>();
-            QueryParameters = new Multimap<string, string>();
-            HeaderParameters = new Multimap<string, string>();
-            FormParameters = new Dictionary<string, string>();
-            FileParameters = new Dictionary<string, Stream>();
-            Cookies = new List<Cookie>();
-        }
+        public object? Data { get; set; }
     }
 }
