--- a/modules/openapi-generator/src/main/resources/csharp-experimental/ApiClient.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-experimental/ApiClient.mustache
@@ -290,47 +290,6 @@ namespace {{packageName}}.Client
             return transformed;
         }
 
-        private ApiResponse<T> Exec<T>(RestRequest req)
-        {
-            RestClient client = new RestClient(_configuration.BasePath);
-
-            client.ClearHandlers();
-
-            var existingDeserializer = req.JsonSerializer as IDeserializer ?? new CustomJsonCodec(_configuration);
-
-            client.AddHandler("application/json", () => existingDeserializer);
-            client.AddHandler("text/json", () => existingDeserializer);
-            client.AddHandler("text/x-json", () => existingDeserializer);
-            client.AddHandler("text/javascript", () => existingDeserializer);
-            client.AddHandler("*+json", () => existingDeserializer);
-
-            client.AddHandler("application/xml", () => new XmlDeserializer());
-            client.AddHandler("text/xml", () => new XmlDeserializer());
-            client.AddHandler("*+xml", () => new XmlDeserializer());
-            client.AddHandler("*", () => new XmlDeserializer());
-
-            client.Timeout = _configuration.Timeout;
-
-            if (_configuration.UserAgent != null)
-            {
-                client.UserAgent = _configuration.UserAgent;
-            }
-
-            InterceptRequest(req);
-
-            var response = client.Execute<T>(req);
-
-            InterceptResponse(req, response);
-
-            var result = ToApiResponse(response);
-            if (response.ErrorMessage != null)
-            {
-                result.ErrorText = response.ErrorMessage;
-            }
-
-            return result;
-        }
-
         private async Task<ApiResponse<T>> ExecAsync<T>(RestRequest req)
         {
             RestClient client = new RestClient(_configuration.BasePath);
@@ -359,7 +318,7 @@ namespace {{packageName}}.Client
 
             InterceptRequest(req);
 
-            var response = await client.ExecuteAsync<T>(req);
+            var response = await client.ExecuteAsync<T>(req).ConfigureAwait(false);
 
             InterceptResponse(req, response);
 
@@ -447,83 +406,6 @@ namespace {{packageName}}.Client
         public Task<ApiResponse<T>> PatchAsync<T>(string path, RequestOptions options)
         {
             return ExecAsync<T>(NewRequest(HttpMethod.Patch, path, options));
-        }
-
-        /// <summary>
-        /// Make a HTTP GET request (synchronous).
-        /// </summary>
-        /// <param name="path">The target path (or resource).</param>
-        /// <param name="options">The additional request options.</param>
-        /// <returns>A Task containing ApiResponse</returns>
-        public ApiResponse<T> Get<T>(string path, RequestOptions options)
-        {
-            return Exec<T>(NewRequest(HttpMethod.Get, path, options));
-        }
-
-        /// <summary>
-        /// Make a HTTP POST request (synchronous).
-        /// </summary>
-        /// <param name="path">The target path (or resource).</param>
-        /// <param name="options">The additional request options.</param>
-        /// <returns>A Task containing ApiResponse</returns>
-        public ApiResponse<T> Post<T>(string path, RequestOptions options)
-        {
-            return Exec<T>(NewRequest(HttpMethod.Post, path, options));
-        }
-
-        /// <summary>
-        /// Make a HTTP PUT request (synchronous).
-        /// </summary>
-        /// <param name="path">The target path (or resource).</param>
-        /// <param name="options">The additional request options.</param>
-        /// <returns>A Task containing ApiResponse</returns>
-        public ApiResponse<T> Put<T>(string path, RequestOptions options)
-        {
-            return Exec<T>(NewRequest(HttpMethod.Put, path, options));
-        }
-
-        /// <summary>
-        /// Make a HTTP DELETE request (synchronous).
-        /// </summary>
-        /// <param name="path">The target path (or resource).</param>
-        /// <param name="options">The additional request options.</param>
-        /// <returns>A Task containing ApiResponse</returns>
-        public ApiResponse<T> Delete<T>(string path, RequestOptions options)
-        {
-            return Exec<T>(NewRequest(HttpMethod.Delete, path, options));
-        }
-
-        /// <summary>
-        /// Make a HTTP HEAD request (synchronous).
-        /// </summary>
-        /// <param name="path">The target path (or resource).</param>
-        /// <param name="options">The additional request options.</param>
-        /// <returns>A Task containing ApiResponse</returns>
-        public ApiResponse<T> Head<T>(string path, RequestOptions options)
-        {
-            return Exec<T>(NewRequest(HttpMethod.Head, path, options));
-        }
-
-        /// <summary>
-        /// Make a HTTP OPTION request (synchronous).
-        /// </summary>
-        /// <param name="path">The target path (or resource).</param>
-        /// <param name="options">The additional request options.</param>
-        /// <returns>A Task containing ApiResponse</returns>
-        public ApiResponse<T> Options<T>(string path, RequestOptions options)
-        {
-            return Exec<T>(NewRequest(HttpMethod.Options, path, options));
-        }
-
-        /// <summary>
-        /// Make a HTTP PATCH request (synchronous).
-        /// </summary>
-        /// <param name="path">The target path (or resource).</param>
-        /// <param name="options">The additional request options.</param>
-        /// <returns>A Task containing ApiResponse</returns>
-        public ApiResponse<T> Patch<T>(string path, RequestOptions options)
-        {
-            return Exec<T>(NewRequest(HttpMethod.Patch, path, options));
         }
     }
 }
