Force response header case-insensitive

--- a/modules/openapi-generator/src/main/resources/csharp-experimental/ApiClient.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-experimental/ApiClient.mustache
@@ -277,7 +277,7 @@ namespace {{packageName}}.Client
             T result = response.Data;
             string rawContent = response.Content;
 
-            var transformed = new ApiResponse<T>(response.StatusCode, new Multimap<string, string>({{#caseInsensitiveResponseHeaders}}StringComparer.OrdinalIgnoreCase{{/caseInsensitiveResponseHeaders}}), result, rawContent)
+            var transformed = new ApiResponse<T>(response.StatusCode, new Multimap<string, string>(StringComparer.OrdinalIgnoreCase), result, rawContent)
             {
                 ErrorText = response.ErrorMessage
             };
